--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
     <h1>Mairie Valréas</h1>
-    <img src="image/photo.jpg" alt="Ma photo importée">
+    <img src="image/Image.jpg" alt="Ma photo importée">
     <br><br><br>
     <h3>
         Voilà pourquoi cette région de Valréas était une enclave. 
