--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             border: 3px solid #333;
             border-radius: 12px;
             box-shadow: 0 4px 12px rgba(0,0,0,0.4);
-            transition: transform 1s ease, opacity 1s ease;
+            transition: opacity 1s ease; /* transition pour fade-in / fade-out */
         }
 
         /* Première photo uniquement */
@@ -46,15 +46,14 @@
             margin-bottom: 40px;
         }
 
-        /* Animation tourbillon pour changement de photo */
-        @keyframes tourbillon {
-            0% { transform: rotate(0deg) scale(0.8); opacity: 0; }
-            50% { transform: rotate(180deg) scale(1.2); opacity: 1; }
-            100% { transform: rotate(360deg) scale(1); opacity: 1; }
+        /* Classe pour cacher l'image progressivement */
+        .fade-out {
+            opacity: 0;
         }
 
-        .tourbillon {
-            animation: tourbillon 1s ease forwards;
+        /* Classe pour faire apparaître l'image progressivement */
+        .fade-in {
+            opacity: 1;
         }
     </style>
 </head>
@@ -82,14 +81,20 @@
         const imgChangeante = document.getElementById("imageChangeante");
 
         setInterval(() => {
-            // Ajouter l'effet tourbillon
-            imgChangeante.classList.add("tourbillon");
+            // Faire disparaître l'image
+            imgChangeante.classList.add("fade-out");
 
-            // Après 1 seconde (durée de l'animation), changer l'image et retirer la classe
+            // Après 1 seconde (durée du fade-out), changer l'image et la faire apparaître
             setTimeout(() => {
                 index = (index + 1) % images.length;
                 imgChangeante.src = images[index];
-                imgChangeante.classList.remove("tourbillon");
+                imgChangeante.classList.remove("fade-out");
+                imgChangeante.classList.add("fade-in");
+
+                // Retirer la classe fade-in après la transition pour pouvoir réappliquer
+                setTimeout(() => {
+                    imgChangeante.classList.remove("fade-in");
+                }, 1000);
             }, 1000);
 
         }, 10000); // toutes les 10 secondes
