--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <h1>Mairie Valréas</h1>
 
     <!-- Première image (plus grande que les autres) -->
-    <img id="premierePhoto" src="image/photo.jpg" alt="Ma photo importée">
+    <img id="premierePhoto" src="image/Image.jpg" alt="Ma photo importée">
     <br><br><br>
 
     <!-- Texte explicatif -->
