--- a/index.html
+++ b/index.html
@@ -25,18 +25,12 @@
         }
 
         img {
-            max-width: 85%;   /* toutes les photos +5% */
-            max-height: 85%;
+            max-width: 200%;   /* toutes les photos x2 */
+            max-height: 200%;
             border: 3px solid #333;
             border-radius: 12px;
             box-shadow: 0 4px 12px rgba(0,0,0,0.4);
             transition: opacity 1s ease; /* transition pour fade-in / fade-out */
-        }
-
-        /* Première photo uniquement */
-        #premierePhoto {
-            max-width: 90%;   /* encore +5% pour la première image */
-            max-height: 90%;
         }
 
         h3 {
@@ -60,8 +54,8 @@
 <body>
     <h1>Mairie Valréas</h1>
 
-    <!-- Première image (plus grande que les autres) -->
-    <img id="premierePhoto" src="image/photo.jpg" alt="Ma photo importée">
+    <!-- Première image -->
+    <img id="premierePhoto" src="image/Image.jpg" alt="Ma photo importée">
     <br><br><br>
 
     <!-- Texte explicatif -->
@@ -91,7 +85,7 @@
                 imgChangeante.classList.remove("fade-out");
                 imgChangeante.classList.add("fade-in");
 
-                // Retirer la classe fade-in après la transition pour pouvoir réappliquer
+                // Retirer la classe fade-in après la transition
                 setTimeout(() => {
                     imgChangeante.classList.remove("fade-in");
                 }, 1000);
