--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
 
         img {
-            transform: scale(2);   /* zoom x2 (200%) */
+            transform: scale(1.05);   /* +5% */
             border: 3px solid #333;
             border-radius: 12px;
             box-shadow: 0 4px 12px rgba(0,0,0,0.4);
